<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B2B2B"
    tools:context=".Stock.ProductDetail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="461dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/title_border"
                    android:gravity="center|center_vertical"
                    android:text="@string/Title"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="107dp"
                    android:layout_height="101dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/logotipo"
                    android:onClick="returnMainMenu"
                    app:layout_constraintBottom_toBottomOf="@+id/txtTitulo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txtTitulo"
                    tools:srcCompat="@drawable/logotipo" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvDetalleProd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/product_detail"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgProduct"
                    android:layout_width="500dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/imageproduct"
                    app:srcCompat="@drawable/logotipo"
                    tools:ignore="InefficientWeight" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvNomProdD"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="124dp"
                    android:text="@string/name"
                    android:textColor="#FFFFFF"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDNI" />

                <TextView
                    android:id="@+id/tvmNombreProdD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:ems="10"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvStockProdD"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvStockProdD" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDescripcionProdD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/descriptionTitle"
                    android:textColor="#FFFFFF"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvNomProdD" />

                <TextView
                    android:id="@+id/tvmDescProdD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:ems="10"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvStockProdD"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvStockProdD" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvStockProdD"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/stock"
                    android:textColor="#FFFFFF"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescripcionProdD" />

                <TextView
                    android:id="@+id/tvmStockProdD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:ems="10"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvCiudad"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvCiudad" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPrecioProdD"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/price"
                    android:textColor="#FFFFFF"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvStockProdD" />

                <TextView
                    android:id="@+id/tvmPrecioProdD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:ems="10"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvPrecioProdD"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvPrecioProdD" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCategoriaProdD"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/category"
                    android:textColor="#FFFFFF"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPrecioProdD" />

                <TextView
                    android:id="@+id/tvmCategoriaProdD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:ems="10"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvTelf"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvTelf" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEditProd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttons_style"
                    android:onClick="editProduct"
                    android:text="@string/editProductTitle"
                    android:textColor="#FFFFFF"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnDeleteProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttons_style"
                    android:onClick="deleteProduct"
                    android:text="@string/delete"
                    android:textColor="#FFFFFF"
                    tools:ignore="ButtonStyle,OnClick" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>